# HyperMemory

./: .gitignore  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-core.txt  requirements-embeddings.txt  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  clawdbot-hook-example.md  clawdbot-integration.md  configuration.md  demo.md  getting-started.md  guardrails.md  mf-embeddings.md  migration.md  pgvector.md  problem-and-fix.md  troubleshooting.md
docs/cloud/: pgvector.md
docs/protocols/: cloud-sync.md  guardrails.md
docs/subsystems/: cloud.md  core.md  maintenance.md  monitoring.md  retrieval.md
examples/workspace/: MEMORY.md.example
hooks/fortress-lite-guard/: HOOK.md  handler.js
hypermemory/: __main__.py  bm25.py  chunks.py  cloud_pgvector.py  config.py  doctor.py  entity_index.py  eval.py  fts.py  journal.py  pgvector_local.py  redaction.py  retrieval.py  search.py
scripts/: answer-with-guardrails.sh  benchmark.sh  checkpoint.sh  hypermemory_cuda_vector_index.py  hypermemory_cuda_vector_search.py  index-status.sh  install.sh  memory-eval.sh  memory-index.sh  memory-retrieve.sh  memory-search.sh  migrate-from-v1.sh  pgvector-smoke.sh  run-embeddings.sh  server.py  supermemory_index.py
scripts/cloud/: pgvector_init.sh  pgvector_schema.sql  pull_curated.py  pull_curated.sh  push_curated.py  push_curated.sh  redaction.py  search_curated.py
scripts/core/: buffer-message.sh  curated-memory-write.sh  update-session-state.sh
systemd/: README.md  mf-embeddings.service
tests/: .gitignore
(+9 files in other folders)
